<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Comic Translator</string>
    <string name="start_translation">Start Translation</string>
    <string name="stop_translation">Stop Translation</string>
    <string name="select_language">Select Language</string>
    <string name="source_language">Source Language</string>
    <string name="target_language">Target Language</string>
    <string name="settings">Settings</string>
    <string name="translation_service_running">Translation Service Running</string>
    <string name="tap_to_close">Tap to close</string>
    <string name="translation_overlay">Translation Overlay</string>
    <string name="english">English</string>
    <string name="indonesian">Indonesian</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="japanese">Japanese</string>
    <string name="chinese">Chinese</string>
    <string name="korean">Korean</string>
    <string name="permission_required">Permission Required</string>
    <string name="overlay_permission_message">This app needs to display over other apps to show translations</string>
</resources>
